--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -73,27 +73,32 @@
         <a (click)="openFile(parcel.certificateOfTitle)">{{ parcel.certificateOfTitle.fileName }}</a>
       </div>
     </div>
-    <div class="full-width subheading1">Owner Information</div>
-    <div class="full-width owner-information">
-      <div class="subheading2">Type</div>
-      <div class="subheading2">Full Name</div>
+    <div
+      class="full-width owner-information"
+      [ngClass]="{ 'crown-owner-information': parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN }"
+    >
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Land Owner(s)</div>
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN">Crown Contact(s)</div>
       <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Organization</div>
       <div class="subheading2" *ngIf="parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN">
-        Ministry/ Department
+        Ministry/Department
       </div>
       <div class="subheading2">Phone</div>
       <div class="subheading2">Email</div>
-      <div class="subheading2">Corporate Summary</div>
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Corporate Summary</div>
       <ng-container *ngFor="let owner of parcel.owners">
-        <div>{{ owner.type.label }}</div>
         <div>{{ owner.displayName }}</div>
-        <div>{{ owner.organizationName }}</div>
+        <div>
+          {{ owner.organizationName }}
+          <app-no-data *ngIf="!owner.organizationName"></app-no-data>
+        </div>
         <div>{{ owner.phoneNumber }}</div>
         <div>{{ owner.email }}</div>
-        <div>
+        <div *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">
           <a *ngIf="owner.corporateSummary" (click)="openFile(owner.corporateSummary)">{{
             owner.corporateSummary.fileName
           }}</a>
+          <app-no-data *ngIf="!owner.corporateSummary"></app-no-data>
         </div>
       </ng-container>
     </div>
