--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
@@ -14,6 +14,24 @@
     <span>{{ _applicationSubmission.purpose }}</span>
   </div>
 
+  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="grid-double">
+    <div *ngIf="_applicationSubmission.soilProjectDurationAmount && _applicationSubmission.soilProjectDurationUnit">
+      {{ _applicationSubmission.soilProjectDurationAmount }}
+      <ng-container [ngPlural]="_applicationSubmission.soilProjectDurationAmount">
+        <ng-template ngPluralCase="=1">
+          {{ _applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
+        </ng-template>
+        <ng-template ngPluralCase="other">
+          {{ _applicationSubmission.soilProjectDurationUnit | titlecase }}
+        </ng-template>
+      </ng-container>
+    </div>
+    <app-no-data
+      *ngIf="!_applicationSubmission.soilProjectDurationAmount || !_applicationSubmission.soilProjectDurationUnit"
+    ></app-no-data>
+  </div>
+
   <div class="full-width soil-table">
     <div></div>
     <div><strong>Soil to be Removed</strong></div>
@@ -104,18 +122,6 @@
       {{ _applicationSubmission.soilAlreadyPlacedAverageDepth }}
       <span *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth !== null">m</span>
     </div>
-  </div>
-
-  <div class="full-width">
-    <span class="subheading1">Project Duration</span>
-  </div>
-  <div class="subheading2 grid-1">Duration</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationUnit }}
-  </div>
-  <div class="subheading2 grid-1">Length</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationAmount }}
   </div>
 
   <div class="subheading2 grid-1">
