--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
@@ -52,8 +52,7 @@
 
   .other-attachments {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
-    overflow-x: auto;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 36px;
     grid-row-gap: 12px;
 
@@ -64,7 +63,7 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
+    grid-template-columns: 1fr 1fr 2fr;
     overflow-x: auto;
     grid-column-gap: 36px;
     grid-row-gap: 12px;
