--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.scss
@@ -1,7 +1,6 @@
 .owner-information {
   display: grid;
-  grid-template-columns: max-content max-content max-content max-content max-content max-content;
-  overflow-x: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-column-gap: 36px;
   grid-row-gap: 12px;
 
@@ -10,12 +9,8 @@
   }
 }
 
-.review-table {
-  grid-template-columns: 1fr 1fr !important;
-
-  .full-width {
-    grid-column: 1/5;
-  }
+.crown-owner-information {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .crown-land {
