--- a/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
@@ -134,7 +134,7 @@
   </div>
 
   <div class="subheading2 grid-1">Cross Sections</div>
-  <div class="grid-double">
+  <div class="grid-double multiple-documents">
     <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
       {{ file.fileName }}
     </a>
@@ -142,7 +142,7 @@
   </div>
 
   <div class="subheading2 grid-1">Reclamation Plan</div>
-  <div class="grid-double">
+  <div class="grid-double multiple-documents">
     <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
       {{ file.fileName }}
     </a>
