--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -2,6 +2,12 @@
 @use '../../../../styles/colors';
 
 :host::ng-deep {
+  .multiple-documents {
+    a {
+      display: block;
+    }
+  }
+
   .view-grid-item {
     display: grid;
     grid-template-columns: minmax(rem(100), 0.5fr) 1fr;
