--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
@@ -133,7 +133,7 @@
 
   <ng-container *ngIf="_noiSubmission?.soilIsExtractionOrMining">
     <div class="subheading2 grid-1">Cross Sections</div>
-    <div class="grid-double">
+    <div class="grid-double multiple-documents">
       <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
         {{ file.fileName }}
       </a>
@@ -141,7 +141,7 @@
     </div>
 
     <div class="subheading2 grid-1">Reclamation Plan</div>
-    <div class="grid-double">
+    <div class="grid-double multiple-documents">
       <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
         {{ file.fileName }}
       </a>
@@ -160,7 +160,7 @@
 
     <ng-container *ngIf="_noiSubmission.soilHasSubmittedNotice">
       <div class="subheading2 grid-1">Notice of Work</div>
-      <div class="grid-double">
+      <div class="grid-double multiple-documents">
         <a *ngFor="let file of noticeOfWorks" (click)="openFile(file.uuid)">
           {{ file.fileName }}
         </a>
