Update ALCS NOI and App multi document layout

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
@@ -152,7 +152,7 @@
     </a>
   </div>
   <div class="subheading2 grid-1">Cross Sections</div>
-  <div class="grid-double">
+  <div class="grid-double multiple-documents">
     <div>
       <a *ngFor="let file of crossSections" (click)="openFile(file)">
         {{ file.fileName }}
@@ -160,12 +160,10 @@
     </div>
   </div>
   <div class="subheading2 grid-1">Reclamation Plan</div>
-  <div class="grid-double">
-    <div *ngFor="let file of reclamationPlans">
-      <a (click)="openFile(file)">
-        {{ file.fileName }}
-      </a>
-    </div>
+  <div class="grid-double multiple-documents">
+    <a *ngFor="let file of reclamationPlans" (click)="openFile(file)">
+      {{ file.fileName }}
+    </a>
   </div>
 
   <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
@@ -185,11 +183,9 @@
   </div>
 
   <div *ngIf="_applicationSubmission.soilHasSubmittedNotice" class="subheading2 grid-1">Notice of Work</div>
-  <div *ngIf="_applicationSubmission.soilHasSubmittedNotice" class="grid-double">
-    <div *ngFor="let file of noticeOfWork">
-      <a (click)="openFile(file)">
-        {{ file.fileName }}
-      </a>
-    </div>
+  <div *ngIf="_applicationSubmission.soilHasSubmittedNotice" class="grid-double multiple-documents">
+    <a *ngFor="let file of noticeOfWork" (click)="openFile(file)">
+      {{ file.fileName }}
+    </a>
   </div>
 </div>
