--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -67,9 +67,7 @@
 
   .other-attachments {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
-    overflow-x: auto;
-    overflow-y: hidden;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 36px;
     grid-row-gap: 12px;
 
@@ -80,7 +78,7 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
+    grid-template-columns: 1fr 1fr 2fr;
     overflow-x: auto;
     grid-column-gap: 36px;
     grid-row-gap: 12px;
