--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.scss
@@ -1,8 +1,6 @@
 .soil-table {
   display: grid;
-  grid-template-columns: max-content max-content max-content;
-  overflow-x: auto;
-  overflow-y: hidden;
+  grid-template-columns: 0.95fr 1fr 2fr;
   grid-column-gap: 36px;
   grid-row-gap: 12px;
 
