Change toggle button to full width

--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -231,7 +231,7 @@
       <app-info-banner
         >Please refer to the <a class="subtext">FIXME: Subdivision</a> page on the ALC website for more information
       </app-info-banner>
-      <mat-button-toggle-group id="home-site-severance" formControlName="isHomeSiteSeverance">
+      <mat-button-toggle-group id="home-site-severance" formControlName="isHomeSiteSeverance" class="input">
         <mat-button-toggle
           class="toggle-button"
           [ngClass]="{
