Add Covenant Proposal Step
* Add Covenant Transferees
* Add the other stuff

--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -279,6 +279,14 @@
     [applicationSubmission]="applicationSubmission"
     [applicationDocuments]="appDocuments"
   ></app-incl-details>
+  <app-cove-details
+    *ngIf="applicationSubmission.typeCode === 'COVE'"
+    [showErrors]="showErrors"
+    [showEdit]="showEdit"
+    [draftMode]="draftMode"
+    [applicationSubmission]="applicationSubmission"
+    [applicationDocuments]="appDocuments"
+  ></app-cove-details>
 </section>
 <section>
   <h3>7. Optional Documents</h3>
