--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
@@ -79,10 +79,10 @@
 </div>
 <div mat-dialog-actions class="actions">
   <button mat-stroked-button color="primary" (click)="onClose()">Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid || isLoading" *ngIf="!isEdit" (click)="onCreate()">
+  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="!isEdit" (click)="onCreate()">
     Add
   </button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid || isLoading" *ngIf="isEdit" (click)="onSave()">
+  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="isEdit" (click)="onSave()">
     Save
   </button>
 </div>
