--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -90,7 +90,7 @@
       class="card-post-decision"
       [items]="postDecisions"
       appendTo="body"
-      placeholder="Linked Modification Request *"
+      placeholder="Linked Request *"
       bindLabel="label"
       bindValue="uuid"
       [clearable]="false"
