Task-1267 Commissioner header says 'Business Days'

--- a/alcs-frontend/src/app/features/commissioner/commissioner.component.html
+++ b/alcs-frontend/src/app/features/commissioner/commissioner.component.html
@@ -1,6 +1,6 @@
 <div class="layout">
   <div class="application">
-    <app-details-header [application]="application" heading="Application"></app-details-header>
+    <app-details-header [application]="application" heading="Application" days="Business Days"></app-details-header>
     <section class="content">
       <app-document
         *ngIf="fileNumber"
