Remove double asterisk

--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -31,7 +31,7 @@
       </div>
 
       <mat-form-field appearance="outline">
-        <mat-label>Resolutions to be Reconsidered*</mat-label>
+        <mat-label>Resolutions to be Reconsidered</mat-label>
         <mat-select formControlName="reconsidersDecisions" multiple>
           <mat-option *ngFor="let decision of decisions" [value]="decision.uuid">{{ decision.resolution }}</mat-option>
         </mat-select>
