--- a/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
@@ -44,7 +44,7 @@
       <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
     </div>
 
-    <div class="full-row">
+    <div>
       <label for="total-area">Total area of the SRW</label>
       <div class="subtext">Provide in hectares. If SRW is for the whole parcel, indicate total parcel area</div>
       <mat-form-field appearance="outline">
