--- a/alcs-frontend/src/app/features/notice-of-intent/proposal/soil/soil.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/proposal/soil/soil.component.html
@@ -21,7 +21,7 @@
     <thead>
       <th></th>
       <th *ngIf="submission.soilToPlaceVolume !== null">Fill to be Placed</th>
-      <th *ngIf="submission.soilToRemoveVolume !== null">Fill to be Removed</th>
+      <th *ngIf="submission.soilToRemoveVolume !== null">Soil to be Removed</th>
     </thead>
     <tbody>
       <tr>
